k8s/istio/example/banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
  labels:
    app: fruit
    name: banana
spec:
  selector:
    matchLabels:
      app: fruit
      name: banana
  template:
    metadata:
      labels:
        app: fruit
        name: banana
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"
          imagePullPolicy: Always
          ports:
            - containerPort: 5678
